--- a/src/TodoModule.Web/packages.config
+++ b/src/TodoModule.Web/packages.config
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Abp" version="1.4.2.0" targetFramework="net452" />
-  <package id="Abp.Web" version="1.4.2.0" targetFramework="net452" />
-  <package id="Abp.Web.Api" version="1.4.2.0" targetFramework="net461" />
-  <package id="Abp.Web.Common" version="1.4.2.0" targetFramework="net452" />
-  <package id="Abp.Web.Mvc" version="1.4.2.0" targetFramework="net452" />
+  <package id="Abp" version="1.5.1" targetFramework="net461" />
+  <package id="Abp.Web" version="1.5.1" targetFramework="net461" />
+  <package id="Abp.Web.Api" version="1.5.1" targetFramework="net461" />
+  <package id="Abp.Web.Common" version="1.5.1" targetFramework="net461" />
+  <package id="Abp.Web.Mvc" version="1.5.1" targetFramework="net461" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net452" />
   <package id="Castle.LoggingFacility" version="3.4.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
