--- a/src/TodoModule.Core/TodoModule.Core.csproj
+++ b/src/TodoModule.Core/TodoModule.Core.csproj
@@ -104,6 +104,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TodoModuleConsts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TodoCoreModule.cs" />
     <Compile Include="Todos\TodoItem.cs" />
@@ -113,6 +114,12 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Localization\TodoModule\TodoModule.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Localization\TodoModule\TodoModule-zh-CN.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
